--- a/styles/index.css
+++ b/styles/index.css
@@ -14,3 +14,22 @@
 }
 
 body { background-color: #F4F6F5; }
+
+.g-button
+{
+    cursor: pointer;
+    border: 1px solid #598d66;
+    padding: 20px 60px;
+    font-weight: 500;
+    font-size: 20px;
+    color: #598d66;
+    background-color: transparent;
+
+    transition: .2s all ease;
+}
+
+.g-button:hover
+{
+    background-color: #598d66;
+    color: white;
+}
